--- a/Web_Programming/homework/Adele.html
+++ b/Web_Programming/homework/Adele.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>아델 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -32,8 +32,10 @@
                             <li class="inner-menu-item"><a href="Hero.html">히어로</a></li>
                             <li class="inner-menu-item"><a href="Paladin.html">팔라딘</a></li>
                             <li class="inner-menu-item"><a href="Dark%20Knight.html">다크나이트</a></li>
-                            <li class="inner-menu-item"><a href="Arch%20Mage%20(Fire,%20Poison).html">아크메이지(불,독)</a></li>
-                            <li class="inner-menu-item"><a href="Arch%20Mage%20(Ice,%20Lightning).html">아크메이지(썬,콜)</a></li>
+                            <li class="inner-menu-item"><a href="Arch%20Mage%20(Fire,%20Poison).html">아크메이지(불,독)</a>
+                            </li>
+                            <li class="inner-menu-item"><a href="Arch%20Mage%20(Ice,%20Lightning).html">아크메이지(썬,콜)</a>
+                            </li>
                             <li class="inner-menu-item"><a href="Bishop.html">비숍</a></li>
                             <li class="inner-menu-item"><a href="Bowmaster.html">보우마스터</a></li>
                             <li class="inner-menu-item"><a href="Marksman.html">신궁</a></li>
@@ -142,8 +144,8 @@
                         <h1 class="article-title">아델(Adele)</h1>
                     </div>
                     <div class="article-body">
-                        <img id="c_image" src="image/아델.webp" alt="아델">
-                        <h1 id="title">장점</h1>
+                        <img id="c_image" src="image/Adele.webp" alt="아델">
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>모든 방면으로 준수한 기본 스펙</strong><br>
                             아델의 경우 부스터 사용만으로 풀 공속 달성이 가능하고, 기본적인 보스 공격력, 데미지, 크리티컬 확률, 크리티컬 데미지 및 방어율 무시율의 수치가 너무 과하지 않아
@@ -161,7 +163,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>까다로운 에테르 운용으로 인한 효율성 문제</strong><br>
                             자동 타격기인 오더가 있는 만큼 아델의 화력 대비 자체는 나쁘지 않지만, 사용하는 에테르 양에 비해 수급 속도가 상당히 느려서 상황에 따라서는 효율이 떨어질 수
@@ -189,14 +191,14 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             소위 뇌빼기 사냥이라 불리는 더블 점프 - 디바이드만 사용해도 어지간한 필드는 정리된다. 그만큼 주력기인 디바이드의 범위가 넓으므로, 4차 전직 이후 육성 난이도는
                             지극히 낮다.
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>평딜</strong><br>
                             딜사이클 자체는 크게 어렵지 않지만 신경 써줘야하는 요소가 많은 편이다. 노쿨 주력기인 '디바이드'를 꾸준히 눌러주며 다음 스킬들을 주기적으로 사용하면된다.
@@ -218,7 +220,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>재사용 대기시간 미적용</strong><br>
                             아델의 스킬 중에는 이 효과가 적용되지 않는 스킬이 많아 효율이 떨어진다고 생각할 수 있지만, 테리토리의 딜 지분이 꽤 높아 이 어빌도 추천된다. 테리토리 외에도
@@ -246,7 +248,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             오더/그레이브, 디바이드, 테리토리/트레드
