--- a/Web_Programming/homework/Angelic Buster.html
+++ b/Web_Programming/homework/Angelic Buster.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>엔젤릭버스터 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Angelic%20Buster.webp" alt="엔젤릭버스터">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>최상위권의 사냥 성능</strong><br>
                             엔버는 흔히 섀도어, 바이퍼와 어깨를 나란히 하는 광부 3대장으로 불린다. 물론 여기에는 소울 시커 원킬이라는 조건이 붙는다. 그래도 일단 조건만 맞으면 필드
@@ -162,7 +162,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>복기형적인 크리티컬 확률 버프</strong><br>
                             엔젤릭버스터의 기본 크확은 고작 35%로, 꼴지만 면했을 뿐이라 상당히 낮다. 때문에 본격적인 육성을 위해선 크확 확보가 관건이며, 어빌 크확 같은 요소들이 꽤
@@ -176,7 +176,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             프라이멀 로어의 기본 범위가 광역기에 준할 정도로 상당히 넓긴 하지만, 최대 공속(2단계)에 도달해도 로어는 사용할 때마다 지연되는 시간이 길다. 그래서 보통은
                             오브젝트 사출기인 소울 시커에 중점을 둔다. 적을 추적하는 사출기 특성상 사냥 한계치와 필드 점유율이 높지만, 마찬가지로 사출기라 각 오브젝트의 퍼뎀이 낮게
@@ -188,7 +188,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             엔젤릭버스터는 120초마다 돌아오는 강력한 극딜 화력과, 긴 무적 시간을 통해 장시간 안정적인 극딜 타임을 보장받는 메커니즘이 주력이다.
                             <br><br>
@@ -209,7 +209,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             보스전 용도로 키울 경우 1번째 줄 필수 옵션. 수치가 그렇게 높아 보이지 않아도 무기, 보조 무기에서만 띄울 수 있는 최대 수치인 40%의 절반에 해당하며
@@ -232,7 +232,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             프라이멀 로어, 트리니티, 소울 시커, 슈퍼 노바
