--- a/Web_Programming/homework/Aran.html
+++ b/Web_Programming/homework/Aran.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>아란 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Aran.webp" alt="아란">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>뛰어난 기본 스펙에 기반한 쉬운 육성 난이도</strong><br>
                             자체 최고 공속에 기본 방무 및 크리티컬 확률 수치도 높고, 스킬마다 퍼뎀도 적절히 분배되어 있다. 그래서 수치상으로만 보면 모자란 부분이 없고, 1 ~ 4차 구간을
@@ -180,7 +180,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>운에 좌우되는 극딜</strong><br>
                             아란 극딜의 핵심은 이른바 1리레 2헌터즈, 즉 리스트레인트 링의 지속시간이 끝나기 전까지 2연속으로 헌터즈 타겟팅을 쓰는 것이다. 그러나 실전에서는 다음과 같은
@@ -223,7 +223,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             몬스터 잡을때마다 추가적으로 눌러야 할 스킬도 없고, 설치기 같이 사냥 빌드 및 위치도 신경쓸 것이 많이 없기 때문에 매우 단순하다. 전방 범위도 길고 전체 범위도
                             꽤 넉넉한 편인지라 점프하면서 두 층을 모두 타격하면서 사냥할 수 있다. 넓은 광역기인 마하의 영역이나 일정 시간동안 광범위기를 난사하는 인스톨 마하를 이용한 광역
@@ -249,7 +249,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             아란의 보스는 극딜에 중심을 둔 아드레날린 부스트와 인스톨 마하를 기본으로 한다. 평딜은 비욘더 하나로 해결이며, 브랜디쉬 마하는 평딜과 극딜 모두 재사용 대기시간이
                             끝날 때마다 사용해주면 된다. 아드레날린 부스트 상태에 돌입할 때 마다 부스트 엔드-헌터즈 타겟팅을 사용하고, 극딜 주기를 맞춰 블리자드 템페스트를 사용하면 된다.
@@ -284,7 +284,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 N% 증가</strong><br>
                             제일 무난한 어빌리티.
@@ -307,7 +307,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             파이널 블로우, 비욘더, 부스트 엔드 - 헌터즈 타겟팅
