--- a/Web_Programming/homework/Arch Mage (Fire, Poison).html
+++ b/Web_Programming/homework/Arch Mage (Fire, Poison).html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>아크메이지(불,독) 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Arch%20Mage%20(Fire,%20Poison).webp" alt="아크메이지(불,독)">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>이론과 실전 간 괴리가 적은 고화력</strong><br>
                             불독의 딜링 구조는 5초마다 도는 플레임 헤이즈 - 미스트 이럽션 콤보와 25초마다 도는 포이즌 노바 - 도트 퍼니셔 콤보가 핵심이다. 즉, 공격할
@@ -170,7 +170,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>DPM 대비 낮은 극딜 효율</strong><br>
                             불독은 짧은 시간마다 누킹을 가하는 평딜 직업이다. 심지어 가장 사용 주기가 긴 스킬이 75초에 불과한 퓨리 오브 이프리트다. 극딜기라 할 만한 스킬이 마땅히 없기
@@ -239,7 +239,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             주력기 플레임 스윕(구 페럴라이즈)의 범위는 전방으로만 정직하게 범위가 나있고 후방, 하단으로는 거의 없다. 플레임 헤이즈-미스트 이럽션은 리마스터 이후
                             후딜이 정말 많이 감소하긴 했으나 근본적으로 단일 타겟이며, 두 개의 스킬을 사용해야 사냥이 가능 하다는 부분에서 사용처는 보스로 국한된다. 결국 불독 사냥의 중추는
@@ -259,7 +259,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             소위 극딜을 능가하는 평딜로 유명한 지속형 누커의 스타일을 보여준다. 스킬 대부분의 재사용 대기시간이 유례없는 25초의 배수로 책정되었는데도 주기 문제가 크게
                             두드러지지 않고 화력 측면에서는 속성 그대로 화끈하고 독한 공격을 쏟아붓는데, 이론과 실전 간의 격차가 없는 것에 가까울 정도로 실용적이다. 그 대가로 방어
@@ -282,7 +282,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>버프 지속 시간 증가</strong><br>
                             인피니티 의존도가 높은 모험가 법사 특성상 첫 줄에 띄워야 하는 어빌리티 중 가장 1순위로 채택된다.
@@ -307,7 +307,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             텔레포트 마스터리/포이즌 리젼,플레임 스윕, 미스트 이럽션
