--- a/Web_Programming/homework/Arch Mage (Ice, Lightning).html
+++ b/Web_Programming/homework/Arch Mage (Ice, Lightning).html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>아크메이지(썬,콜) 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Arch%20Mage%20(Ice,%20Lightning).webp" alt="아크메이지(썬,콜)">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>강력한 극딜</strong><br>
                             평딜이 강력한 불독과는 완전히 상반된 특징이다. 인피니티를 통한 극딜 증폭 수준이 무시무시해 썬더 브레이크 등 조건만 부합하면 엄청난 극딜량을 보여준다. 무한
@@ -174,7 +174,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>지나치게 높은 데미지 보정</strong><br>
                             썬콜의 자체 데미지 보정은 빙결 스킬 100%에서 번개 스킬은 최대 160%로 매우 높다. 이 부분은 자본을 투자할수록 유니크 잠재능력 이상에서 등장하는 보스 공격력
@@ -196,7 +196,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             5차 전직 이전까지는 체인 라이트닝과 프로즌 오브가 주력으로 쓰이며, 이후에는 아이스 에이지와 썬더 브레이크, 스피릿 오브 스노우가 추가된다. 설치기로 썬더 스피어가
                             있기 때문에 몹이 새기 쉬운 곳에 박아두면 필드 점유율이 높아진다. 텔레포트 마스터리에 하이퍼 스킬을 배정받은 덕분에, 기동성 하나는 여느 텔레포트 마법사보다도
@@ -204,7 +204,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>빙결 5중첩</strong>과 석몰이가 핵심이다. 특징 항목에서 서술됐듯, 썬콜의 파괴력은 모3법 공통인 인피니티와
                             빙결 5중첩의 지속에 크게 의존한다. 그러나 빙결 중첩은 번개 속성 공격을 강화하고 나서 1회씩 소모된다. 고로 칠링 스텝, 프로즌 오브, 엘퀴네스, 아이스 오라,
@@ -218,7 +218,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>버프 지속 시간 증가</strong><br>
                             인피니티 의존도가 높은 썬콜은 다른 선택지 없이 첫 줄은 무조건 레전더리 옵션을 뽑아야한다.
@@ -235,7 +235,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             체인 라이트닝,라이트닝 스피어, 썬더 스피어
