--- a/Web_Programming/homework/Ark.html
+++ b/Web_Programming/homework/Ark.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>아크 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Ark.webp" alt="아크">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>유연한 기동성</strong><br>
                             일단 레프 상태의 더블 점프는 타 직업과 비교해서 좀 짧다는 평가를 받고, 스펙터 상태의 트리플 점프도 웬만한 직업의 더블 점프에 비교될 정도의 이동거리다. 하지만
@@ -160,7 +160,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>높은 스펙터 잠식 의존도</strong><br>
                             아크는 사냥이나 보스 가릴 것 없이 스펙터 잠식 의존도가 매우 크다. 잠식 상태의 스킬 범위, 데미지 모두 레프 상태일 때보다 우월하고, 대부분의 유틸 및 딜링
@@ -206,7 +206,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             피로도는 다른 직업들에 비해 높으나, 소수의 공격 스킬을 제외하면 다들 범위가 깡패라고 해도 무방할 정도로 넓고 퍼뎀도 높아서, 필드가 조금 좁다 싶으면 손쉽게
                             휩쓸어버릴 수 있다. 그러나 고레벨이 될수록 재사용 대기시간이 달린 여러 스킬을 순차적으로, 상황과 '스킬 빌드'에 맞춰서 사용해야 한다는 게 발목을 잡는다. 특히
@@ -215,7 +215,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>딜사이클</strong><br>
                             레프 상태일 때 4종의 차지드라이브 스킬로 스펠 버프를 발동시키고 스펙터로 변신하여 정신력 게이지를 관리하면서 딜을 넣다가 게이지가 부족해질 때, 혹은 스펠 버프가
@@ -261,7 +261,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             어빌리티를 무난하게 가겠다면 어빌리티를 타지 않는 아크 특성상 첫줄은 보스 몬스터 공격 시 데미지 증가가 가장 좋은 선택이다. 공격 속도 1단계 증가는 자력
                             풀공속(2등급)에 도달 가능하니 없어도 되며, 주력기의 타겟 수가 6명으로 준수하여 다수기 타겟 수 1 증가 어빌리티도 필요없다.
@@ -272,7 +272,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             플레인 차지드라이브, 잊혀지지 않는 악몽/흉몽, 다가오는 죽음/돌아오는 증오
