--- a/Web_Programming/homework/Battle Mage.html
+++ b/Web_Programming/homework/Battle Mage.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>배틀메이지 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Battle%20Mage.webp" alt="배틀메이지">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>뛰어난 파티 보조 능력</strong><br>
                             배틀메이지는 파티원을 지원하는 동시에 자신을 강화할 수 있는 스킬들을 고루 갖추고 있어 서포터로 활용하기 적합하다. 지원 방식이 오라 기반인 것도 유용한 점. 비숍은
@@ -174,7 +174,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>오라 시스템의 태생적인 한계와 개별 스킬의 뒤처지는 성능</strong><br>
                             배틀메이지가 보유한 다섯 가지의 오라는 성능만 보면 요긴하게 써먹을 수 있어 보이지만, 피니쉬 블로우의 사거리만큼 좁은 적용 범위가 스킬의 활용도를 떨어뜨린다.
@@ -216,7 +216,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             피니쉬 블로우를 기반으로 찾아가서 때리는 방식이 주가 된다. 여기에 5차 이전에는 다크 제네시스의 회전율을 높여서 필드를 정리하고, 이후로는 알터, 리퍼, 에르다
                             파운틴 등 설치기를 활용해서 복잡한 이동을 최대한 억제한다. 다크 라이트닝이나 배틀 스퍼트 등 이동과 공격이 합쳐진 스킬의 비중이 크면 피로도가 낮지만, 유니온
@@ -224,7 +224,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             텔레포트로 다크 라이트닝을 발동시켜 보스 몬스터에게 징표를 박고, 배틀 레이지를 활성화한 피니쉬 블로우로 공격한다. 그러나 다크 라이트닝의 비중이 크기 때문에 키 한
                             번 잘못 눌렀다가 위험해지는 상위 보스로 갈수록 징표 박기가 힘들어지고, 이는 곧 치명적인 수준의 피해량 감소로 이어진다.
@@ -239,7 +239,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 공격 시 데미지 증가</strong><br>
                             통칭 보공. 보스전을 아예 등한시해서 아획이나 메획이 더 급한 유저를 제외하면 직업을 불문하고 가장 무난한 옵션이다.
@@ -256,7 +256,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             피니쉬 블로우, 데스, 다크 라이트닝
