--- a/Web_Programming/homework/Bishop.html
+++ b/Web_Programming/homework/Bishop.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>비숍 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Bishop.webp" alt="비숍">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>전직업 최고의 파티 보조 능력</strong><br>
                             비숍의 컨셉에 맞추어 파티 플레이와 보스전에 유용한 스킬이 많다. 공격력/마력을 올려주는 어드밴스드 블레스, 경험치와 아이템 획득률을 올려주는 홀리 심볼, 체력 비례
@@ -191,7 +191,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>버프 및 설치 관리의 중요성, 직업의 높은 이해도 요구</strong><br>
                             비숍은 파티 레이드에서 버퍼/힐러의 역할을 혼자서만 수행해야 하고, 파티에 적정 스펙으로 들어왔다면 딜링도 해야 하기 때문에 신경쓸 요소가 많다. 파티원의 생존
@@ -211,7 +211,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             트라이엄프 페더를 상시 유지하면서 적절한 위치에 파운틴 포 엔젤을 설치하고 나머지 구간을
                             빅뱅과 피스메이커 가끔 제네시스와 헤븐즈 도어를 써서 넓은 범위를 커버하는 정도면 끝난다. 특히 빅뱅은
@@ -228,7 +228,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>딜러</strong><br>
                             엔젤레이를 주력으로 사용한다. 이후 10초마다 데미지를 %로 올려주는 버프기인 피스메이커, 1분마다 방깎을 제공하는 디버프기인 엔젤릭 터치를 사용하고, 스택형
@@ -277,7 +277,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>버프 지속 시간 증가</strong><br>
                             인피니티 때문에 무조건적으로 첫째 줄에 뽑아야 하는 어빌리티. 가뜩이나 딜이 시원찮은 편인 비숍에게 인피니티 버프 가동률은 보스든 사냥이든 목숨줄이나 다름없는 편이고, 리마스터 이후 벞지를 175% 달성해도 무한인피 유지 성공률이 71%라서 최대한 더 높은 벞지를 확보해야 할 필요가 생겨 더더욱 최우선적으로 노려야 한다. 한 때 엔드스펙 유저들이 재사용을 첫째 줄에 넣기도 했으나, 그 이유였던 인피니티가 쿨초를 안 받게 변경되어 효용성이 소멸된 뒤로는 벞지가 1순위 옵션이다. 딜링 외에도 주력 보조 기술들(홀심, 어블 등)의 시간이 길어지고, 심알바에도 유용하다는 장점도 있었으나 홀심의 너프로 인하여 심알바가 거의 사장된 뒤로는 그쪽 방면으로의 유용성은 많이 퇴색됐다.
@@ -290,7 +290,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             빅뱅, 엔젤레이, 제네시스/트라이엄프 페더
