--- a/Web_Programming/homework/Bowmaster.html
+++ b/Web_Programming/homework/Bowmaster.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>보우마스터 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Bowmaster.webp" alt="보우마스터">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>높은 크리티컬 확률</strong><br>
                             리티컬 샷, 샤프 아이즈, 링크 스킬에서 받아오는 크리티컬 확률만 무려 64%나 된다. 기본 크리티컬 확률 5%까지 합치면 69%. 이는 1위인 패스파인더 79%,
@@ -187,7 +187,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>수동적인 유틸리티</strong><br>
                             제네시스 무기의 아이온 빼면 아예 무적이 없다. 그나마 무적에 준하는 역할을 맡은 실루엣 미라주는 최대 HP의 50%에 달하는 공격을 받으면 무조건 소모되는데, 막상
@@ -200,7 +200,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             다수 공격기인 언카운터블 애로우를 사용하는 빌드와 속사기인 폭풍의 시를 사용하는 빌드로 나뉜다.
                             <br><br>
@@ -234,14 +234,14 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             폭풍의 시 카이팅을 중심으로, 위험한 패턴을 고도의 컨트롤로 극복하며 꾸준히 화력을 욱여넣는 방식으로 운영한다. 흡혈, 슈퍼 스탠스, 순간이동, 받는 피해 감소 등
                             유용한 보조 스킬들은 많지만, 해방된 제네시스 무기 외의 자체 무적이 없기 때문에 안정성은 다소 떨어질 수 있다.
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             대부분의 직업에 유효한 무난한 어빌리티. 보우마스터는 어빌리티 선택이 자유롭고 또 기본 데미지%와 보스 데미지%가 낮은 편이라 효율이 높아 이 어빌리티를 선택한다.
@@ -259,7 +259,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             폭풍의 시, 퀴버 카트리지, 애로우 플래터/플레시 미라주
