--- a/Web_Programming/homework/Captain.html
+++ b/Web_Programming/homework/Captain.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>캡틴 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Captain.webp" alt="캡틴">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>높은 크리티컬 관련 능력치</strong><br>
                             자체 크리티컬 확률만 75%로, 비숍과 패스파인더, 나이트로드, 하이퍼 찍은 다크나이트와 함께 공동 1위이다. 크리티컬 데미지도 기본 55%에 달하여 최대 125%인
@@ -179,7 +179,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>매우 어려운 코어 강화 난이도와 부족한 코어 슬롯</strong><br>
                             캡틴이 당면한 가장 큰 문제점. V 매트릭스의 혜택을 전혀 받지 못해서 타 직업보다 상대적인 열위가 두드러진다. 캡틴의 코어 강화 난도는 종합적으로 2위로 평가된다.
@@ -200,7 +200,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             주력 다수 공격기인 퍼실레이드의 원킬컷은 낮다. 하지만 그것만으로는 필드를 다 휘어잡을 수 없는 만큼, 소환수의 원킬컷을 맞춰 필드 점유율을 높이는 것이 가장 큰
                             과제다. 따라서 설치형 소환수인 시즈 봄버와 배틀쉽 봄버의 운용이 중요하다. 또한 중간중간 전함 노틸러스와 스트레인지 봄, 5차 스킬인 불릿 파티나 데드아이 등으로
@@ -208,7 +208,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>평딜</strong><br>
                             캡틴 평딜의 주축은 래피드 파이어, 헤드 샷, 각종 소환수와 5차 스킬들이다. 그 중에서도 본체의 평딜은 컨티뉴얼 에이밍의 디버프가 적용된 보스를 대상으로 래피드
@@ -226,7 +226,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             통칭 보공. 모든 직업에게 무난한 어빌리티라, 캡틴이라고 예외는 아니다. 오히려 캡틴은 기본 보총뎀이 상시 15%에 불과해서 효율이 좋다.
@@ -247,7 +247,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>사냥용</strong><br>
                             퍼실레이드, 전함 노틸러스, 스트레인지 봄
