--- a/Web_Programming/homework/Dark Knight.html
+++ b/Web_Programming/homework/Dark Knight.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>다크나이트 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Dark%20Knight.webp" alt="다크나이트">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>탄탄한 기본 스펙</strong><br>
                             기본 최종 데미지가 43%나 되고, 다크 레조넌스를 무한정 유지하기만 하면 162.44%지
@@ -175,7 +175,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>유연하지 못한 무적기의 가동 방식</strong><br>
                             무적이 있어도 일단 죽어야 발동된다 건 사실 페널티다. 요컨대 능동적이지 못하다. 보스전 경험이 풍부하고 컨트롤이 좋은
@@ -220,7 +220,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             5차 전직 이전엔 비홀더 쇼크, 다크 신서시스, 5차 전직 후에는 추가로 다크 스피어, 비홀더 임팩트, 블리츠 실드를 이용한 광역기 위주의 사냥을 한다. 다크
                             임페일은 원킬컷이 낮고 경직도도 짧지만 범위가 그리 넓지 않고 모전 특유의 저열한 기동성이 임페일 위주의 사냥에 제동을 걸기 때문이다. 대신 물스공인 덕분에
@@ -236,7 +236,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             평딜은 궁니르 디센트를 사용하다가 다크 스피어와 비홀더 스킬로 근접 누킹을 하는 것으로 매우 단순하다. 극딜은 조금 까다로운 편인데, 극딜을 시작하기
                             15초~25초 전에 다크니스 오라를 켜고 보스에게 근접해 꾸준히 스택을 쌓아야 한다. 40초의 짧은 지속시간으로 인해 풀스택 막타를 터트릴 수 있는 타이밍은
@@ -245,7 +245,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             1순위 어빌리티. 리마스터 이후 다크나이트는 궁니르 디센트에 붙어있던 재사용 대기시간이 삭제됐고, (구)새크리파이스를 계승한 다크 레조넌스의 유지 난도와,
@@ -275,7 +275,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             궁니르 디센트, 다크 임페일, 비홀더
