--- a/Web_Programming/homework/Demon Slayer.html
+++ b/Web_Programming/homework/Demon Slayer.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>데몬슬레이어 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Demon%20Slayer.webp" alt="데몬슬레이어">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>최상위권의 기본 스펙</strong><br>
                             높은 데미지%, 방무, 주력기들의 추가 크리티컬 확률, 자력 풀공속 덕분에 무~저자본에서도 어느 정도 성능이 보장된다. 맷집이 좋고 HP 드레인 스킬이 있어
@@ -165,7 +165,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>어려운 4차 이전 육성</strong><br>
                             데몬 익스플로전을 배우기 전까지, 1~3차를 사거리 짧은 데몬 슬래시로 넘겨야 한다. 그렇다고 다른 보조할 만한 스킬이 있는 것도 아니고, 있더라도 데몬 포스가
@@ -188,7 +188,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             슬래시와 임팩트를 제외한 주력 다수기의 범위가 넓어서 사냥 자체에는 큰 하자가 없다. 나온 지 좀 된 직업이라 스킬이 물 흐르듯이 자연스럽게 이어지지 못한다는 점도
                             잘 적응하기만 한다면 크게 거슬리지도 않는다. 어차피 사냥 중에는 데몬 익스플로전이 주력이고, 서버러스와 데빌 크라이, 5차 스킬을 간간히 섞는 딜사이클이기 때문.
@@ -196,7 +196,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             극딜은 바인드나 데빌 크라이 디버프로 이블 토처 조건을 만족한 상황에서 데몬 어웨이크닝+데몬 베인으로 폭딜을 쏟아붓는 방식이고, 이후는 데몬 어웨이크닝 지속 여부에
                             따라 갈린다. 물론 이와 무관하게 인피니티 포스를 포함한 각종 버프와 요르문간드, 오르트로스는 기회가 될 때마다 사용해야 한다.
@@ -220,7 +220,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             가장 무난한 선택지. 후술할 재사용 대기시간 미적용 옵션과 함께 가장 선호되는 옵션이다. 재사용 대기시간 미적용 옵션을 첫 번째 줄에서 사용 시 2~3번째 줄에서
@@ -248,7 +248,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             데몬 슬래시, 데몬 임팩트, 데몬 익스플로젼
