--- a/Web_Programming/homework/Eunwol.html
+++ b/Web_Programming/homework/Eunwol.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>은월 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,12 +143,13 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Eunwol.webp" alt="은월">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>최상위권의 개인 유틸리티</strong><br>
                             한마디로 없는 게 없다. 자가 회복, 회피, 상태이상 방어, 무적, 바인드, 각종 디버프 등 일일이 열거하기에는 입이 아플 정도로 많다. 특히 검은 마법사의 패턴 중
                             하나인 창조와 파괴의 저주를 막을 때 소혼 결계만 쓰면 끝인지라, 최종 콘텐츠의 공략 가능성 또한 높다.
-                            뛰어난 파티 플레이 보조 및 기여 능력</strong><br>
+                            <br><br>
+                            <strong>뛰어난 파티 플레이 보조 및 기여 능력</strong><br>
                             분혼 격참, 속박진, 귀문진, 약화 등은 물론 솔플에도 유용하지만, 파티플에서 더욱 빛을 발한다. 특히 분혼 격참은 아예 타격점을 하나 더 만듦으로써 단순한 최종
                             데미지 증가 이상의 효용을 보이고, 귀문진은 크리티컬 관련 능력치를 증가시켜주기 때문에 궁수 직업군의 크리티컬 리인포스와 궁합이 잘 맞는다. 그래서 120초 주기의
                             파티에서 은월은 비숍과 함께 서포터로 자주 기용된다.
@@ -176,7 +177,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>상대적으로 부실한 평딜 능력</strong><br>
                             극딜은 훌륭하지만, 극딜이 빠지고 난 이후의 공백이 다소 크다. 어차피 최상위권 보스로 갈수록 극딜이 평딜보다 더 중요해지는 추세라지만, 귀참만 주야장천으로 쓰고
@@ -203,7 +204,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             사냥 1타 원킬컷도 무난하고, 전직업을 통틀어 '뇌빼기 사냥'이 가장 쉬울 정도로 단순하고 빠른데다 효율적이다. 폭류권의 넓은 범위와 기동성을 보조할 각종 이동기들을
                             토대로, 아무 생각 없이 공격만 난사하면서 한바퀴 빙 돌면 끝난다. 물론 폭류권 1타 원킬이 나지 않는 스펙이라면 늘어질 수는 있겠지만, 여차하면 귀문진이나 에르다
@@ -211,7 +212,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             다재다능한 시너지 딜러. 다른 직업이 몸을 사려야 할 상황에서도 다양한 유틸리티를 기반으로 패턴을 회피하고 버티며 꾸준히 화력을 욱여넣는 데에 특화되어 있다.
                             그렇다고 해서 극딜 화력이 뒤처지지도 않고, 오히려 2분 극딜 직업임에도 3분 극딜과 비슷할 정도의 화력을 구가한다.
@@ -246,7 +247,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             은월은 숨은 보공과 데미지가 많아 보공 효율이 뛰어나다고 하기는 어렵다. 하지만 크리티컬을 충분히 수급해줬거나 2-3줄로 미룰거라면, 보공을 레전 1줄로 보내는 것이
@@ -270,7 +271,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             귀참, 여우령, 소혼 장막, 폭류권
