--- a/Web_Programming/homework/Evan.html
+++ b/Web_Programming/homework/Evan.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>에반 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Evan.webp" alt="에반">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>(고스펙 한정) 높은 사냥 한계치</strong><br>
                             융합 스킬은 대상 1인당 퍼뎀 배율이 낮다. 그 대신 색적 및 공격 범위가 넓게 퍼져 있으므로, 원킬컷을 맞췄다는 전제 하에 시간당 1.6만에서 1.9만까지도 노려볼
@@ -169,7 +169,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>까다롭고 복잡한 보스전</strong><br>
                             사냥도 사이클 돌리느라 빡빡하기는 매한가지지만, 보스전은 더욱 어렵다. 에반 따로, 미르 따로, 융합 스킬도 따로따로 있다 보니 손가락이 꼬이기 쉽다. 특히 아차하는
@@ -203,20 +203,20 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             융합 스킬, 특히 투사체를 주축으로 삼고 운용하므로, 주력 스킬은 스오윈, 다오썬, 브오어다. 이로 인해 사냥 한계치는 높지만, 투사체 특유의 낮은 퍼뎀 배율을
                             고려할 때 스펙 향상 측면에서의 부담을 감수해야만 한다. 스파이럴 오브 마나 등을 적절히 설치해서 이를 보완하는 것도 유저의 몫이다.
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             에반 스킬과 미르 스킬을 서로 연계하여 융합 스킬을 사용하고, 보조 피해를 추가로 입히는 것이 에반의 기본적인 운용법이다.
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             에반의 스펙 대부분은 최종 데미지와 마력에 집중되어 있고, 데미지 증가는 적다. 따라서 데미지와 합산되는 보공의 효율을 잘 받는다. 보스 레이드를 자주 다니는
@@ -252,7 +252,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             서클 오브 마나, 서클 오브 어스, 드래곤 브레스, 서클 오브 윈드, 서클 오브 썬더, 마법 잔해
