--- a/Web_Programming/homework/Hero.html
+++ b/Web_Programming/homework/Hero.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>히어로 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -142,8 +142,8 @@
                         <h1 class="article-title">히어로(Hero)</h1>
                     </div>
                     <div class="article-body">
-                        <img id=c_image src="image/히어로.webp" alt="히어로">
-                        <h1 id="title">장점</h1>
+                        <img id=c_image src="image/Hero.webp" alt="히어로">
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>강력한 보스전 성능</strong><br>
                             보스전에서 화력을 대폭 끌어올리는 인레이지와 자상, 바인드에 걸린 몬스터에게 더 큰 데미지를 주는 찬스 어택, 크리티컬 공격의 피해량을 증가시키는 인사이징
@@ -173,7 +173,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>낮은 기본 크리티컬 확률</strong><br>
                             기본 크리티컬 확률이 전 직업 최저 수치인 <strong>25%</strong>로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
@@ -182,7 +182,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             보스전과 마찬가지로 워리어 리프-레이징 블로우만 쓰고 다녀도 썩 나쁘지 않은 시간당 처치 수를 기록할 수 있지만, 제대로 빌드를 짜서 많은 처치 수를
                             뽑아내려면 상단 범위가 우월한 인사이징을 함께 사용하면서 오라 블레이드, 레이지 업라이징, 콤보 데스폴트, 소드 일루전, 블리츠 실드, 에르다 파운틴 같은
@@ -194,7 +194,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             쉽고 강하다. 어지간한 스킬들이 죄다 <strong>최종 데미지</strong>에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
                             피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 <strong>무적</strong>을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
@@ -209,7 +209,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             속칭 보공. 최종 데미지가 높은 대신 총 데미지가 20~25%밖에 되지 않기 때문에 보공 효율이 좋다.
@@ -225,7 +225,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             이징 블로우, 파이널 어택, 레이지 업라이징, 발할라
