--- a/Web_Programming/homework/Ho Young.html
+++ b/Web_Programming/homework/Ho Young.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>호영 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Ho%20Young.webp" alt="호영">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>좋은 사냥능력</strong><br>
                             기본적으로 사냥이 매우 뛰어나며 특정 맵에서는 기존의 사냥이 뛰어난 직업을 상회하는 모습을 보인다. 1 ~ 3차의 경우에는 천, 지, 인의 기본 스킬을 배워 약간
@@ -201,7 +201,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>어려운 조작 및 운용 난이도</strong><br>
                             호영은 분신난무, 괴력난신을 필두로 30초동안 강한 극딜을 낸다. 그러나 극딜이 강하다 해도 10초 바인드+180초 주기 극딜 메타에 맞지 않을 뿐더러 갖가지
@@ -230,7 +230,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             1. 태을선단으로 부적, 두루마리 게이지 충전<br>
                             2. 분신부 / 호접지몽 버프 켜기<br>
@@ -242,7 +242,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             토파류를 주력으로 사용하며, 추가 보공이 달린 금고봉을 쿨타임마다 사용한다. 다만 천지인 환영이 켜진 상태라면 토파류만으로 금고봉 쿨다운을 리셋할 수 있기 때문에
                             금고봉이 주력기가 된다. 호영 특유의 난해한 극딜 구조와 심각한 극딜 준비 시간 때문에 이론상 DPM을 완벽하게 구현해 내려면 높은 숙련도가 필요하며, 이론상
@@ -265,7 +265,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             필수 어빌리티가 없는 모든 직업들의 첫 번째 줄. 다른 데미지에 영향을 미치는 옵션에 비해 수치가 압도적으로 높아 항상 선호된다. 보공은 첫줄과 2~3줄의 차이가 커
@@ -300,7 +300,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             환영 분신부/선기 : 분신 둔갑 태을선인, 토파류/지진쇄, 여의선 : 인/금고봉 : 인
