--- a/Web_Programming/homework/Illium.html
+++ b/Web_Programming/homework/Illium.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>일리움 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Illium.webp" alt="일리움">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>편리하고 뛰어난 사냥</strong><br>
                             5차 전직 이후 피로도, 마릿수, 원킬컷의 세 마리 토끼를 모두 잡은 직업이다. 적합한 사냥터를 찾아 크리스탈 게이트의 위치만 적절히 선정했다면, 3분마다 게이트를
@@ -175,7 +175,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>선입력에 의한 딜레이 문제</strong><br>
                             자벨린과 오브의 딜레이 자체는 평범한 수준이지만 오브-자벨린 연계 과정에서 선입력을 달고 살게 되는데 이 때마다 360ms + 540ms = 900ms의 딜레이가
@@ -224,7 +224,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             <strong>1. 동전꼽기</strong><br>
                             제자리에서 같은 스킬만 냅다 쓰는 경우 같은 스킬을 약 45번 가량 사용하면 그 뒤로는 공격 모션만 나오고 공격이 안 되는데, 이를 최대한 늦추기 위해서 매크로를
@@ -259,7 +259,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             글로리 윙은 게이지를 다 채워야 발동할 수 있기 때문에 발동 주기가 일정하지 않다. 극딜 타이밍에 글로리 윙을 맞출 수 있도록 미리 게이지를 쌓아둬야 한다.
                             <br><br>
@@ -286,7 +286,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 % 증가</strong><br>
                             보스용 어빌. 가장 범용적인 선택지다.
@@ -314,7 +314,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             크래프트:자벨린Ⅱ/글로리 윙:자벨린, 리액션:디스트럭션Ⅱ, 마키나/리액션:도미네이션Ⅱ
