--- a/Web_Programming/homework/Index.html
+++ b/Web_Programming/homework/Index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>메이플스토리 직업별 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
     <!-- 에니메이션 -->
     <script>
         $(document).ready(function () {
@@ -205,13 +205,13 @@
                 </a>
                 <a href="Arch%20Mage%20(Fire,%20Poison).html">
                     <div class="item">
-                        <img src="Arch%20Mage%20(Fire,%20Poison).webp" alt="아크메이지(불,독)">
+                        <img src="image/Arch%20Mage%20(Fire,%20Poison).webp" alt="아크메이지(불,독)">
                         <h1>모험가 마법사 아크메이지(불,독)</h1>
                     </div>
                 </a>
                 <a href="Arch%20Mage%20(Ice,%20Lightning).html">
                     <div class="item">
-                        <img src="Arch%20Mage%20(Fire,%20Poison).webp" alt="아크메이지(썬,콜)">
+                        <img src="image/Arch%20Mage%20(Fire,%20Poison).webp" alt="아크메이지(썬,콜)">
                         <h1>모험가 마법사 아크메이지(썬,콜)</h1>
                     </div>
                 </a>
