--- a/Web_Programming/homework/Kain.html
+++ b/Web_Programming/homework/Kain.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>카인 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Kain.webp" alt="카인">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>뛰어난 생존력</strong><br>
                             기본적으로 재사용 대기시간 40초에 최대 유지시간 3.4초인 무적기를 가지고 있는데, 이는 무적기 중에서도 상위권의 가동률을 자랑한다. 대부분의 무적기의 사용 주기가
@@ -173,7 +173,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>복잡한 딜사이클로 인한 불안정한 딜 효율</strong><br>
                             카인의 스킬 매커니즘의 중심은 액티브 스킬이 아니라 고유 특성화 스킬에 있다. 즉 온오프 스킬인 드래곤 팡과 리메인 인센스, 패시브 스킬인 데스 블레싱이라는 세 가지
@@ -215,7 +215,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             복잡하지만 그만큼 효율은 나온다만, 주력 스킬 역할을 해야 할 스트라이크 애로우의 범위가 좁다. 그래서 발현과 처형 카테고리의 여러 스킬까지 동원해서 빌드를 짠다.
                             물론 점프와 스트라이크 애로우만 쓰는 사냥도 가능하지만, 한계가 명확하다. 요컨대 '뇌빼기 사냥'은 힘들다. 게다가 카트리지와 게이지에 종속되어 있어서 빌드 짜기도
@@ -243,7 +243,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>딜사이클</strong><br>
                             카인의 전투는 '포제션'을 눌러서 스트라이크 애로우 및 카트리지 스킬들을 '발현 스킬'로 강화한 후 보스에게 스킬을 적중시켜서 죽음의 축복 스택을 쌓음과 동시에
@@ -282,7 +282,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             보공이 적은 편에 속하는 직업이라 보공 효율이 좋다. 첫째줄, 아랫줄 모두 사용가능.
@@ -303,7 +303,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             스트라이크 애로우/체이싱 샷, 드래곤 팡/리메인 인센스, 데스 블레싱/스니키 스나이핑
