--- a/Web_Programming/homework/Kaiser.html
+++ b/Web_Programming/homework/Kaiser.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>카이저 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Kaiser.webp" alt="카이저">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>다양한 개인 유틸</strong><br>
                             카이저는 다양한 부류의 유틸을 갖추고 있다. 공반무시, 체력비례 데미지감소, 무적기, 기동성, 재사용 대기시간 초기화, 사망방지버프 등 필수적인 개인 유틸이 많다.
@@ -189,7 +189,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>극단적인 변신 의존도</strong><br>
                             카이저는 변신이 없으면 모험가 법사의 인피니티처럼 화력만 약해지고 끝나는게 아니라, 화력은 물론이고 생존조차 버거워진다. 카이저의 높은 생존력은 대부분 보스 패턴을
@@ -226,7 +226,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             주력기는 소드 스트라이크다. 전방 범위가 짧지만, 위쪽 범위가 넓고 후방 범위도 있기 때문에 어지간한 층 간격에는 손쉽게 대처할 수 있다. 그리고 파이널
                             피규레이션이나 파이널 트랜스로 변신하면 기동성이 폭발적으로 증가하므로, 소드 스트라이크와 연계하면 필드 점유율이 대폭 향상된다. 단 소드 스트라이크의
@@ -240,7 +240,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             파이널 피규레이션을 통한 변신 유지가 핵심이다. 보스전 자체는 기가 슬래셔 연사와 커맨드+윙비트에, 극딜 타이밍에 드라코 슬래셔 5연타를 쓰는 정도로, 비교적
                             단순하다. 그러나 변신이 곧 직업의 정체성을 상징하는 직업인지라, 그만큼 변신 여부가 보스전 성능을 좌우한다고 볼 수 있다. 변신이 퍼뎀부터 타수까지 관여하기
@@ -254,7 +254,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             첫줄은 보스 몬스터 공격 시 데미지 증가 또는 변신 시간을 늘리기 위한 버프 지속시간 증가중 하나를 선택하나 본캐용으로는 보통은 전자를 더 선호하는 편이다. 그리고
                             둘째줄은 나머지 하나를 뽑는다. 아이템 획득률 상승이나 메소 획득률 상승은 둘째줄 이하에서 뽑는다. 자체 크확이 워낙 높아서 링크, 유니온으로 크확 100%를
@@ -263,7 +263,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             기가 슬래셔, 소드 스트라이크, 윌 오브 소드
