--- a/Web_Programming/homework/Kinesis.html
+++ b/Web_Programming/homework/Kinesis.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>키네시스 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Kinesis.webp" alt="키네시스">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>압도적인 스킬 범위와 뛰어난 사냥</strong><br>
                             아케인 포스와 어센틱 포스 사냥터에 입성하고 나서 특히 돋보이는 장점이다. 키네시스는 5차 전직 이후 쿨다운이 없는 사냥기를 지급받는 매우 특이한 경우로, 싸이킥
@@ -180,7 +180,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>지나치게 많은 디버프와 선행 스킬</strong><br>
                             우선 스킬을 쓰려면 P.P도 충전해야 하기 때문에 설치기인 싸이킥 드레인과 싸이킥 오버, 그리고 디버프인 싸이킥 그라운드, 싸이킥 샷을 미리 사용해야 하는데, 문제는
@@ -242,7 +242,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             5차 이전까지는 사냥 능력이 좋다고 하기는 어렵다. 물론 싸이킥 샷의 범위가 상당히 넓고, 스매싱의 원킬컷과 범위가 준수하기 때문에 200레벨 달성이 말도 못하게
                             어렵다는 것은 아니지만, 싸이킥 샷을 사냥용으로 자주 쓰면 기본적으로 PP 수급량이 소모량을 따라가지 못한다. 게다가 싸이킥 샷 스킬 메커니즘 상 몹이 줄줄 새는
@@ -266,7 +266,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             데미지가 강하고, 3분 주기 극딜을 넣을 수 있기 때문에 좋지만, 주력기의 딜레이가 길고 사거리가 짧으며, 딜사이클이 주로 설치기 위주이며, 30초 지속에 90초
                             쿨다운 설치기인 극딜기는 약간 생각해보아야 할 문제이다. 3분 주기에 준극딜이 있는 건 시드링 활용에 있어 강점이지만 극딜기 지속시간보다 시드링 지속시간이 짧아
@@ -307,7 +307,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>패시브 스킬 레벨 1 증가</strong><br>
                             최종 데미지가 붙은 패시브 스킬이 많은 키네시스와 궁합이 좋은 옵션으로, 특히 보공과 데미지를 총합한 수치가 360% 이상인 유저면 보공보다도 이 효과를 선호한다.
@@ -323,7 +323,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             싸이킥 그랩, 얼티메이트-메테리얼, 얼티메이트-B.P.M, 텔레키네시스
