--- a/Web_Programming/homework/Lara.html
+++ b/Web_Programming/homework/Lara.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>라라 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Lara.webp" alt="라라">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>탄탄한 기초 스펙</strong><br>
                             데미지, 최종 데미지, 방무 등 기초 스펙상으로는 부족할 것이 없다. 특히 최종 데미지만 기본 97.98%를 상시로 받는데, 이는 인피니티 쓴 모험가 마법사를
@@ -165,7 +165,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>쓸모없는 유틸리티</strong><br>
                             분명 보유한 보조 스킬은 많지만, 다음과 같은 이유로 실전에서 유의미하게 써먹기 힘들다.
@@ -219,7 +219,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             정기 뿌리기를 주력으로 쓰지만, 핵심은 용맥 분출이다. 그러나 용맥은 위치와 속성이 무작위로 결정되므로, 어느 위치에서 어느 용맥을 분출시킬지는 조금 생각할 필요가
                             있다. 설치기가 많다고 해서 그게 온전한 뇌빼기 사냥으로 이어지지는 않기 때문이다. 다행히도 4차 전직 이후 풍월주인을 습득하고 나면 분출 스킬의 전반적인 범위가
@@ -247,7 +247,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>평딜</strong><br>
                             수치 자체만 보면 극딜 못지않게 좋다. 흡수와 분출을 유동적으로 쓸 수 있다면 제일 좋겠지만, 용맥 생성의 쿨다운과 원본의 랜덤성 때문에 흡수에서 분출로 자연스럽게
@@ -281,7 +281,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>패시브 스킬 레벨 1 증가</strong><br>
                             효과를 받지 않는 스킬도 있지만, 딜 상승 기대치가 보공 20%를 상회하므로 무조건 채용된다. 재사용 대기시간 미적용 효과와 비교해 보아도 일정한 효율을 보여주는
@@ -318,7 +318,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             정기 뿌리기, 용맥 분출, 용맥 흡수
