--- a/Web_Programming/homework/Luminous.html
+++ b/Web_Programming/homework/Luminous.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>루미너스 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Luminous.webp" alt="루미너스">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>뛰어난 사냥 능력</strong><br>
                             최하위권의 피로도와 최상위권의 마리수를 동시에 갖춘 직업으로, 라이트 리플렉션과 텔레포트만 사용해도 거의 모든 사냥터에서 원젠컷이 가능하다.
@@ -158,7 +158,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>부족한 화력</strong><br>
                             실전과 이론 간의 괴리가 적다곤 하지만, 그냥 딱 잘라 말해서 약하다. 특히 극딜이 매우 약하다 못해 없는 수준이고, 평딜 역시 조건부 버프에 의존해야 하다 보니
@@ -194,7 +194,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             선파이어 고정-라이트 리플렉션으로 사냥하는 빌드와 최대한 이퀄리브리엄을 유지하는 무한 진리의 문 빌드로 나뉜다.
                             <br><br>
@@ -212,7 +212,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             이퀄리브리엄을 얼마나 오래 지속할 수 있느냐에 따라 갈린다. 버프 지속시간 증가 옵션이 없거나 50% 미만이면 공격 주기가 아예 돌아가지 않는다고 해도 과언이 아닐
                             정도로 약해진다. 특히 퍼니싱 리소네이터는 버프 지속시간을 최소 105%는 증가시켜야 1이퀄 2리소가 가까스로 가능할 정도로 빡빡하다.
@@ -223,7 +223,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>버프 지속시간 증가</strong><br>
                             이퀄리브리엄의 지속시간을 늘린다. 특히 2연속 이퀄 퍼니싱을 위해 최소 105%까지는 뽑아야 하는 만큼, 1번째 줄 50%의 중요성은 굳이 언급할 필요가 없다.
@@ -245,7 +245,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             라이트 리플렉션, 아포칼립스, 앱솔루트 킬
                         </p>
