--- a/Web_Programming/homework/Marksman.html
+++ b/Web_Programming/homework/Marksman.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>신궁 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Marksman.webp" alt="신궁">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>스킬들의 긴 X축 사정거리</strong><br>
                             주력 스킬인 피어싱의 사거리가 710px, 스나이핑의 사거리가 730px, 차지드 애로우는 1300px 이상으로 길다. 이 정도의 압도적 사거리 차이는 아예 보스들의
@@ -169,7 +169,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>빈약한 생존력</strong><br>
                             주력기인 스나이핑과 극딜기인 리피팅 크로스보우 카트리지의 액션 딜레이가 크고, 더블 점프 외의 할 이동기가 전무하여 기동성도 떨어진다. 게다가 유일한 무적기인 트루
@@ -178,7 +178,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             수평으로 요약할 수 있다. 사거리가 매우 길어 웬만한 범위 내에서 몬스터 타격이 가능하다. 그대신이라면 상하 범위가 비교적 빈약하긴 하지만, 피어싱에 붙은 파편으로
                             그나마 커버가 가능하며, 리마스터 이후 피어싱 상하 범위 자체도 꽤 크게 늘어나서 심하게 좁은것도 아니다.
@@ -191,14 +191,14 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             원거리에서 방해받지 않고 적을 공격할 수 있는 상황이면 특유의 화력을 충분히 발휘할 수 있지만, 스데미 이상의 상위 보스로 갈수록 방해 수단이 많아져서 소위
                             '말뚝딜'을 넣기 어려워진다. 특히 애로우 일루전이 얼마나 통하느냐에 따라 상성이 결정되는 경우가 많다.
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             어빌리티에서 가장 많은 데미지 증가량을 얻을 수 있기 때문에 필수적으로 챙겨야 할 어빌리티가 없다면 레전더리 맨 윗 줄 옵션들 중에서 가장 선호받는 어빌리티이다.
@@ -212,7 +212,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             피어싱/인핸스 피어싱, 스나이핑/인핸스 스나이핑
