--- a/Web_Programming/homework/Mechanic.html
+++ b/Web_Programming/homework/Mechanic.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>메카닉 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Mechanic.webp" alt="메카닉">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>(고스펙 한정) 지형을 가리지 않는 준수한 사냥능력</strong><br>
                             어떤 직업이든 지형의 형태로 인해 사냥능력의 유불리함을 따질 수 밖에 없다. 그러나 메카닉은 설치 스킬의 원킬컷을 맞출 수만 있다면 몇십초에 달하는 지속 시간과 호밍
@@ -167,7 +167,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>(사냥 한정) 높은 로봇 스킬 의존도</strong><br>
                             기본적으로 신경써야되는 로봇 스킬만 5개나 되는데다 각 스킬들의 성능을 온전하게 발휘하려면 위치를 주의깊게 지정해야 한다. 그나마 재사용 대기시간이 없기 때문에 다시
@@ -198,7 +198,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             탱크 모드+호밍 미사일 혹은 휴먼 모드+매시브 파이어가 핵심이다. 그러나 호밍 미사일은 어디까지나 보조 공격용 오브젝트를 사출하는 스킬이라 원킬컷의 허들이 높다.
                             게다가 휴먼 모드에서는 미사일이 1인당 1개씩밖에 유도되지 않는다. 반면 탱크 모드에서는 미사일의 퍼뎀이 기존 대비 60%로 깎이는 대신 미사일을 다중으로 유도할 수
@@ -216,7 +216,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             로봇 마스터리 패시브 패치이후 설치기들로 받는 데미지 증가효과 스택 관리가 필요없어져, 그만큼 각종 전용 5차 스킬과 메카닉 본체의 비중이 커진다. 고로 매시브
                             파이어: IRON-B와 호밍 미사일을 주력으로 삼고, 여기에 멀티플, 마미컨, 캐리어 등 전용 5차 스킬들과 인팬트리 등 공용 5차 스킬의 보조를 받는 형상이 된다.
@@ -227,7 +227,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>패시브 스킬 레벨 1 증가</strong><br>
                             필수. 레전드리 등급에서만 등장하는 옵션이기에 명성치와 서큘레이터가 적지 않게 갈려 나가지만, 4차 스킬 호밍 미사일 시스템 연구가 스킬 레벨당 호밍 미사일 1발
@@ -241,7 +241,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             호밍 미사일, 매시브 파이어 : SPLASH-F/IRON-B, 디스토션 필드
