--- a/Web_Programming/homework/Mercedes.html
+++ b/Web_Programming/homework/Mercedes.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>메르세데스 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Mercedes.webp" alt="메르세데스">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>동성을 활용한 뛰어난 생존력</strong><br>
                             기본 회피율 및 추가 회피율 덕분에 도적과 비견될 정도로 MISS가 많이 뜬다. 게다가 하이킥 데몰리션과 스피릿 이스케이프에 텔레포트 판정이 있어서 패턴 회피에도
@@ -166,7 +166,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>높은 사냥 피로도와 낮은 사냥 능력</strong><br>
                             메르세데스의 사냥 주력기인 리프 토네이도는 스킬 특성상 반드시 체공해야만 쓸 수 있다. 고로 점샷이 강제된다. 물론 점샷은 다른 직업도 다 쓰는 기술이지만, 발판
@@ -187,7 +187,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             스펙이 충분하다면 이그니스 로어 스택 갱신과 무관하게 리프 토네이도만 가지고도 무난하게 사냥을 이어나갈 수 있지만, 로어 스택에 공속 1단계가 붙어있기 때문에 최대
                             공속(8단계)에 도달하기 위해서는 1스택이라도 있어야 한다. 연계 자체도 크게 어렵지 않아서 굳이 등한시할 이유도 없다.
@@ -225,7 +225,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             이그니스 로어 10스택을 쌓아놓은 상황에서 이슈타르의 링을 주축으로 삼고, 가끔 스킬 연계로 로어 스택을 갱신하면 끝. 투사체를 날리는 단일기가 주력 스킬이라 잡몹
                             패턴에 취약하지만, 연계용 스킬이 모두 다수기이므로 원투킬만 난다면 크게 문제될 것은 없다.
@@ -236,7 +236,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             심플하면서도 어느 직업이든 잘 어울리는 무난한 옵션으로, 필수 어빌이 존재하지 않는 직업 대부분은 첫줄로 선택한다. 메르 역시 다르지 않다.
@@ -253,7 +253,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             이슈타르의 링, 스트라이크 듀얼샷/파이널 어택 : 듀얼보우건, 리프 토네이도/거스트 다이브
