--- a/Web_Programming/homework/Mihile.html
+++ b/Web_Programming/homework/Mihile.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>미하일 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Mihile.webp" alt="미하일">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>압도적인 생존 관련 유틸리티</strong><br>
                             (성공률이 높다는 가정 하에) 가동률 높은 무적기인 로얄 가드, 자신이 입는 피해의 경우에는 어드밴스드 소울 실드, 빛의 수호로 최대 HP의 비례하여 입는 피해를
@@ -165,7 +165,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>어려운 보스전 운용 난이도</strong><br>
                             미하일의 주력기이자 존재의의인 로얄 가드는 광범위 사냥 및 보스전 패턴 회피에 지대한 이득을 제공하지만, 약 0.24~0.5초 일찍 사용해야 하는 까다로운 조건을
@@ -194,7 +194,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             샤이닝 크로스, 데들리 차지, 5중첩 로얄 가드를 주력으로 사용한다. 로얄 가드에 굳이 5중첩이라고 조건을 붙인 것은, 4중첩 이하 로얄 가드의 공격 범위가 넓다고
                             하기 힘든 수준이기 때문이다. 그리고 5차 전직 이후 습득하는 클라우 솔라스의 범위도 로얄 가드의 중첩 수에 비례해 증가하므로, 결국 5중첩을 잘 유지하기 위해 각종
@@ -207,7 +207,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             로얄 가드의 무적 가동률은 최대 약 67%에 달한다. 따라서 보스전의 공격 패턴과 타이밍을 잘 파악하고 있다는 전제 하에 안정적으로 화력을 투사할 수 있다. 그러나
                             아무리 숙달되어서 타이밍을 잘 맞힐 자신이 있다 해도, 리스크가 덜한 패턴만 골라서 로얄 가드로 반격하는 식의 안정성 있는 플레이가 권장된다. 물론 보스마다 패턴이
@@ -216,7 +216,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             미하일은 어빌리티 자유도가 높은 편이지만 대무분의 직업들과 마찬가지로 많은 미하일 유저들이 첫번째 줄 옵션으로 사용한다.
@@ -241,7 +241,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             로얄 가드/오펜시브 디펜스, 샤이닝 크로스, 인스톨 실드/소울 마제스티
