--- a/Web_Programming/homework/Night Lord.html
+++ b/Web_Programming/homework/Night Lord.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>나이트로드 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Night%20Lord.webp" alt="나이트로드">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>전직업 최강의 극딜 능력</strong><br>
                             나이트로드는 극딜 순위를 언급할 때 최상위권에서 내려오지 않는 직업이다. 그만큼 스킬 구성이 바인드 후 극딜에 특화되어 있다. 10초 동안 약 955,152%의
@@ -166,7 +166,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>(무자본 한정) 다소 높은 사냥 원킬컷</strong><br>
                             사냥 주력기인 쇼다운 챌린지는 총 퍼뎀이 쉐파 포함 2,000%대로 보통 수준이지만, 숙련된 표창술과 다크 세레니티 외에는 상시 화력 보정이 없다. 그래서 높은 무기
@@ -180,7 +180,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             단순하고 단조로운 사냥 방식 덕분에 피로도는 극히 낮다. 쇼다운 챌린지를 주력으로 쓰고, 포 시즌과 풍마수리검으로 필드를 적당히 정리하며, 다크 플레어와 다크로드의
                             비전서를 설치하면서 필드를 장악하면 끝. 물론 마크 오브 나이트로드로 원킬이 나는 스펙을 구비한다면 섀도어의 메익원킬에 비할 바는 아니지만 나름 꽤 준수한 수준의
@@ -189,7 +189,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             모든 능력치를 화력에 몰아넣은 유리 대포. 평상시에는 거리를 벌린 상황에서 속칭 '짤딜'을 누적시키다가, 극딜 타이밍에 바인드 걸고 초근접 극딜을 쏟아붓는 식으로
                             운용한다. 다른 직업이 하나둘씩 가지고 있는 무적이나 피해 감소 등 방어 기능이 일절 존재하지 않고, 믿을 것은 오직 다크 사이트와 돌진 중 다크 사이트가 적용되는
@@ -197,7 +197,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             극딜러로서 발군의 능력을 발휘하는 나로에게는 이보다 더 좋은 선택지가 없다.
@@ -216,7 +216,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             쿼드러플 스로우, 쇼다운 챌린지, 마크 오브 어쌔신/나이트로드
