--- a/Web_Programming/homework/Night Walker.html
+++ b/Web_Programming/homework/Night Walker.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>나이트워커 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Night%20Walker.webp" alt="나이트워커">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>우월한 기동성과 빠른 공격속도</strong><br>
                             기본 공속이 8단계로 최대치를 찍고, 스킬 시전 속도 또한 스타 더스트와 다크니스 오멘을 제외하면 매우 빠르다. 쉐도우 모멘텀 3스택 기준으로 주력기의 후딜레이가
@@ -172,7 +172,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>5차 스킬의 구조적 문제</strong><br>
                             주력 딜링기인 쉐도우 배트, 퀸터플 스로우에 집중한다면 코어 강화가 쉬운 것은 분명한 장점이다. 하지만 최상위 보스에서 나이트워커의 5차 스킬에는 활용하기에 몇 가지
@@ -192,7 +192,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             나이트워커 사냥의 핵심은 쉐도우 배트다. 1대1 대인전 스킬을 사냥기로 사용해서 사냥이 안 좋다는 인식이 있지만 필드몹을 대상으로 배트 원킬이 가능한 나이트워커는
                             시커 원킬 엔버, 메익 원킬 섀도어 못지 않게 뽐내는 사냥 효율을 자랑한다. 물론 원킬이 아니더라도 3방 정도만 나면 보통 수준은 된다. 단지 원킬에 대한 로망이
@@ -206,7 +206,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             극딜 준비 과정이 조금 복잡하고 까다롭지만, 쉐도우 모멘텀의 관성 시스템을 잘 활용하면 비(非)속사기 직업 중에서도 압도적인 타수를 욱여넣을 수 있다. 같은 표창
                             도적 직업인 나이트로드와 흡사하지만, 화력을 약간 덜어낸 대신 유틸리티를 받아챙긴 케이스라고 보면 된다.
@@ -220,7 +220,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             통칭 '보공'. 어느 직업에게나 잘 어울리는 어빌리티다.
@@ -237,7 +237,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             퀸터플 스로우, 쉐도우 배트/래버너스 배트, 다크니스 오멘
                         </p>
