--- a/Web_Programming/homework/Paladin.html
+++ b/Web_Programming/homework/Paladin.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>팔리딘 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Paladin.webp" alt="팔라딘">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>막강한 생존력</strong><br>
                             일명 팔퀴벌레. 홀리 차지로 항상 (최대 HP에 비례한 공격을 포함한) 피해 감소 10%를 달고 다니고, 블레싱 아머가
@@ -175,7 +175,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>부족한 기동력</strong><br>
                             모험가 전사 전체가 공유하는 단점. 추가 이동기라고는 돌진뿐이라, 평범한 더블 점프와 윗점만 가지고는 몸놀림이 시원찮을 수밖에 없다. 물론 보스전에서 팔라딘은
@@ -190,7 +190,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             5차 전직이전 디바인 차지로 사냥하면서 생츄어리와 스마이트를 광역기로 사용하며, 5차 전직 이후 블레스드 해머를 활성화할 때마다 30초 동안은 서펜트 활성화한
                             바이퍼의 기분을 느껴볼 수 있다. 물론 나머지 30초 동안은 오라 웨폰이나 블리츠 실드, 에르다샤워, 마이티 묠니르, 생츄어리, 스마이트 등으로 적절히 커버해야
@@ -198,7 +198,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             팔라딘의 보스전에서의 가장 큰 메리트는 뭐니뭐니해도 쉽게 사망하지 않는다는 것이다. 보스전 도중 상시 유지가 가능한 홀리 차지와 블레싱 아머에 붙은 모든
                             피해량 감소 효과가 있어서, 대다수의 보스들이 가지는 즉사기인 최대 HP 비례 100%의 피해를 입히는 공격들의 피해량을 깎아 풀피 상태라면 맞아도 죽지 않고
@@ -215,7 +215,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             어드밴스드 홀리 차지에 데미지% 보정이 있어 히어로처럼 엄청난 효율을 보이진 않으나, 그래도 자체 보공%은 없어 무난한 선택지다.
@@ -231,7 +231,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             디바인 차지, 블래스트, 디바인 저지먼트/디바인 스티그마
