--- a/Web_Programming/homework/Pathfinder.html
+++ b/Web_Programming/homework/Pathfinder.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>패스파인더 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Pathfinder.webp" alt="패스파인더">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>준수한 보스전 성능</strong><br>
                             패스파인더는 속사기급으로 빠르게 난사가 가능한 주력기를 보유했기 때문에 평딜이 상당히 우수한 편이다. 또한 카디널 트랜지션 하나만으로도 준수한 기동성을
@@ -199,7 +199,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>낮은 스탯공격력 증가량</strong><br>
                             패스파인더는 에인션트 가이던스 조건부 최종 데미지를 제외하면 스텟창에 표시되는 최종 데미지가 20%고 상시 유지 가능한 기본 데미지
@@ -232,7 +232,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             포착된 적을 자동으로 추적하는 카디널 디스차지, 넓게 폭발하는 카디널 블래스트, 좌우와 위로 빠르게 움직이면서 이동 지점 주변의 적을 공격하는 카디널 트랜지션이
                             주축이 된다. 보통 블래스트와 디스차지를 매크로로
@@ -250,7 +250,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>평딜</strong><br>
                             커스 트랜지션의 5중첩 디버프를 유지하고, 에인션트 가이던스를 빠르게 발동시키는 게 관건이다. 이 중 트랜지션 디버프는 트랜지션 문양을 띄운 후 콤보 어썰트의 활대
@@ -282,7 +282,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             대체적으로 어느 캐릭터에나 무난하고 효과가 좋은 옵션이다. 기본 뎀퍼가 낮은 패파의 경우 효율이 더욱 증가한다.
@@ -323,7 +323,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1단계-3중첩 3코어</strong><br>
                             3중첩(공용): 카디널 디스차지, 카디널 블래스트, 엣지 오브 레조넌스
