--- a/Web_Programming/homework/Phantom.html
+++ b/Web_Programming/homework/Phantom.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>팬텀 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Phantom.webp" alt="팬텀">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>이론을 실현시키는 고성능 유틸리티</strong><br>
                             스틸 스킬을 제외해도 무적, 사망 방지, 순간이동 등 자체 보유한 유틸리티가 많다. 특히 무적은 모험가에게서 새크로생티티(팔라딘)와 파이널 컷(듀얼블레이드)을
@@ -162,7 +162,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>낮은 화력으로 인한 투자 가치 하락</strong><br>
                             비숍보다도 밑도는 딜러, 이른바 숍밑딜로 악명높다. 팬텀은 고성능 유틸리티를 자랑하는 대신 항상 동스펙대의 다른 직업에 비해 화력이 부족하도록 설계되어 있어서,
@@ -184,7 +184,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             팬텀의 사냥은 200레벨, 즉 5차 전직이 기점이다. 사냥용 스킬은 원본 소지자의 것을 가져오기 때문에 원킬컷과 스킬 범위 편차가 크며, 무기 상수 페널티까지 받기
                             때문에 원본이 원킬이 나도 팬텀이 쓰면 안 나기도 한다. 고로 어떤 스킬을 쓰든 간에 안정적으로 원킬컷을 맞추기 위해 팬텀 본인의 스펙 수준도 높아야 한다.
@@ -296,7 +296,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>공격 사이클</strong><br>
                             사이클은 굉장히 간단하다. 트와일라이트로 적에게 방무 디버프를 걸고 얼드로 보스를 때리다가 템페스트 오브 카드, 로즈 카르트 피날레, 블랙잭, 마크 오브 팬텀,
@@ -347,7 +347,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             대부분의 직업들이 선호하는 1순위 어빌리티. 팬텀은 특히 보공의 효율이 좋은 직업에 속하므로 반드시 챙겨야한다. 보통 첫째 줄에 넣는 것이 일반적이나, 재사용을 첫째
@@ -372,7 +372,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>보스용</strong><br>
                             얼티밋 드라이브, 블랑/느와르 카르트, 템페스트 오브 카드
