--- a/Web_Programming/homework/Shadower.html
+++ b/Web_Programming/homework/Shadower.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>섀도어 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Shadower.webp" alt="섀도어">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>최상위권의 사냥 효율</strong><br>
                             섀도어는 메소 익스플로젼 스킬의 성능으로 인해 엔젤릭버스터, 바이퍼와 더불어 사냥 3대장으로 유명하다. 비록 세르니움부터는 몬스터의 HP가 기하급수적으로 늘어나면서
@@ -177,7 +177,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>상대적으로 빈약한 극딜</strong><br>
                             극딜 주기가 45~90초라 시드링 및 3분 극딜 주기 직업과 합을 맞출 수는 있지만, 총합 퍼뎀이 분산되어있다. 극딜용 버프를 다 받았을 때 쏟아낸다기보다는 누킹기로
@@ -217,7 +217,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             섀도어 사냥의 꽃은 단연 메소 익스플로젼이라 할 수 있다. 그러나 섀도어는 메익을 제외하더라도 준수한 성능의 광범위 공격기와 설치기 덕분에 사냥 빌드를 쉽게 설계할
                             수 있다. 메익 사냥을 할 때는
@@ -231,7 +231,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             스킬 구조가 극딜보다는 평딜에 치중되어 있다. 특히 섀도어의 극딜기인 소닉 블로우는 재사용 대기시간이 짧으나 퍼뎀도 낮다.
                             <br><br>
@@ -251,7 +251,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             첫째 줄로 채택하기 무난한 옵션.
@@ -277,7 +277,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             암살, 크루얼 스탭, 메소 익스플로젼
