--- a/Web_Programming/homework/Soul Master.html
+++ b/Web_Programming/homework/Soul Master.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>소울마스터 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Soul%20Master.webp" alt="소울마스터">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>뛰어난 기본 스펙</strong><br>
                             자력 최대 공격 속도이며, 자체 바인드와 짧은 쿨 무적기 보유, 기본 크리티컬 확률이 50%로 높고, 솔루나 타임의 효과, 전직마다 강화 효과를 받은 주력기는
@@ -168,7 +168,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>무적기의 성능 문제</strong><br>
                             하이퍼 액티브 스킬인 블레이징 어썰트 & 러스터 차지는 무적 판정이지만, 돌진을 하는 특징이 있다. 캐릭터의 위치가 패턴 파훼에 영향을 미치는 선택받은 세렌과 같은
@@ -179,7 +179,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             <strong>5차 전직 이전</strong><br>
                             솔루나 타임을 통해 솔라 슬래시&루나 디바이드를 주력 스킬로 사용한다. 낮은 원킬 난이도가 특징이다. 또한 코스믹 스킬로 2차 전직 때는 코스믹 매터, 이후에는
@@ -191,7 +191,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             <strong>딜 사이클</strong><br>
                             소울 이클립스, 엘리시온, 코스믹 포지, 코스모스를 동시에 사용한다. 엔버 링크 및 시드링을 사용할 경우, 솔루나 디바이드와 코스모스 지속시간에 맞춰 사용한다.
@@ -213,7 +213,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 공격시 데미지 증가</strong><br>
                             통칭 '보공'. 가장 무난한 첫줄 선택지다.
@@ -229,7 +229,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             솔라 슬래시/루나 디바이드, 코스믹 버스트, 코스믹 샤워
