--- a/Web_Programming/homework/Striker.html
+++ b/Web_Programming/homework/Striker.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>스트라이커 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Striker.webp" alt="스트라이커">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>뛰어난 기동성</strong><br>
                             이단점프에 윗점프까지 되는 엘리멘탈 쉬프트, 텔레포트식 이동기 섬광, 전방 이동기 파도, 승천+뇌성까지 이동 공격 스킬이 4개 존재하며, 엘리멘탈 쉬프트+승천으로
@@ -167,7 +167,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>적지 않은 뇌전 풀스택 의존도</strong><br>
                             엘리멘탈: 라이트닝의 뇌전이 스택 중첩식 버프고, 중요 버프인 질풍/태풍은 뇌전 스택당 데미지 버프에 풀스택에서 시전시 스킬 데미지 보너스가 있어 뇌전 풀스택을 써야
@@ -193,7 +193,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             크게 벽력과 승천+뇌성 연계로 갈린다. 벽력은 상향 범위가 넓어서 복층 구조에서 활약한다. 특히 벽력의 경직을 파도 캔슬로 삭제할 수 있기 때문에, 익숙해진다면 제법
                             넓은 필드에서도 최적화된 빌드를 창안할 수 있다. 그리고 승뇌 연계는 좌우로 긴 사냥터에서 빠르게 움직이면서 몹을 쓸어내기에 적합하다. 여기에 신뇌합일의 연쇄 번개,
@@ -204,7 +204,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             주력기는 벽력-섬멸 연타를 기준으로 하며, 여기에 쿨마다 나가는 뇌신창격과 짧쿨 누킹기인 교아탄, 데미지 증가 버프이자 딜링기인 태풍을 넣어준다.
                             <br><br>
@@ -212,14 +212,14 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             스트라이커는 어빌리티 의존도가 낮다. 그나마 고려할 만한 크확조차 다른 곳에서 채우면 그만이다. 광부라면 아획도 괜찮지만, 스킬 구조 때문에 광부로 사용하기에는
                             적합하지 않다. 따라서 보공 20%를 노리는 것이 가장 낫다.
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             섬멸, 벽력, 질풍/태풍, 파도/해파
