--- a/Web_Programming/homework/Viper.html
+++ b/Web_Programming/homework/Viper.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>바이퍼 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Viper.webp" alt="바이퍼">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>단순하고 쉬운 조작법과 운용법</strong><br>
                             사이클 자체에 온갖 컨트롤 요소가 존재하는 다른 직업에 비해, 바이퍼는 서펜트 스크류 켜고 피스트 인레이지 하나만 쓰면 되기에 컨트롤이 단순하고 간편하다. 설령
@@ -178,7 +178,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>극딜기에 몰려 있는 무적</strong><br>
                             바이퍼에게는 디펜스 폼이라는 이론상 가동률이 최대 75%에 달하는 방어 스킬이 있으나, 무적은 극딜기인 라이트닝 폼과 하울링 피스트에만 붙어있다. 최상위권
@@ -200,7 +200,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             단순하고 쉽다. 5차 직후부터 세르니움 이전까지는 서펜트 스크류로 시작하고 끝난다. 서펜트 1틱컷 스펙을 갖췄다면, 활성화하고 슈퍼 점프와 볼텍스 점프(윗점)만으로
                             사방팔방 뛰어다니기만 하면 다 지워진다.
@@ -215,7 +215,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             씨 서펜트를 활성화한 상황에서 피스트 인레이지만 냅다 때려박고 있으면 끝. 별다른 캔슬 방법이나 MP 이외의 2차 자원을 요구하지 않기 때문에 지극히 단순하다. 또한
                             바이퍼에게는 이론상 가동률이 무려 최대 75%나 되는 디펜스 폼이 있어 각종 즉사기에 대처할 수 있다. 그러나 무적의 경우 죄다 극딜기인 라이트닝 폼의 에너지볼과
@@ -224,7 +224,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>패시브 스킬 레벨 1 증가</strong><br>
                             씨 서펜트 강화 스킬들과 오펜스/디펜스 폼, 가드 크러쉬가 적용된다. 쓸컴뱃까지 적용하면 오펜스/디펜스 폼의 증가량이 4%, 가드 크러쉬의 방무가 8%, 최종
@@ -246,7 +246,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             피스트 인레이지, 씨 서펜트 인레이지/서펜트 어썰트 인레이지, 전함 노틸러스
