--- a/Web_Programming/homework/Wild Hunter.html
+++ b/Web_Programming/homework/Wild Hunter.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>와일드헌터 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Wild%20Hunter.webp" alt="와일드헌터">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>높은 기본스펙과 투자효율</strong><br>
                             와일드헌터는 다른 직업이 엠블렘에 수백만원을 부어 얻어내는 공퍼를 기본적으로 30% 이상 가지고 있다. 기본스펙이 좋아 투자효율이 떨어진다는 세간의 인식과는 달리,
@@ -161,7 +161,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>어려운 코어 강화 난이도로 인해 부족한 코어 슬롯</strong><br>
                             와일드헌터의 코어 강화 난이도는 그 악랄하다는 불독과 맞먹는 수준으로 강화 코어 10개 중 9개를 강화한다. 때문에 코어 강화 난이도가 낮은 편에 속한 다른 직업에
@@ -177,14 +177,14 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             5차 전까지는 와일드 발칸 Type-P로 사냥하다가 5차 이후부터는 와일드 그레네이드 덕분에 숨통이 트인다. 주력 스킬들이 공속의 영향을 받지 않기 때문에 공속
                             유지의 부담은 크지 않으나, Type-P의 하단 범위가 부실해서 너무 높이 뛰었다가는 몬스터가 줄줄이 새는 경우를 자주 볼 수 있다.
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             어나더 바이트를 얼마나 잘 유지하는지가 핵심이다. 어나더 바이트는 플레이어 본체가 아닌 재규어의 일반 공격이나 재규어 스킬로 축적되는 디버프로, 플레이어 본체가
                             공격시 캐릭터 레벨에 비례해 퍼뎀이 증가하는 추가 타격을 부여한다. 따라서 와헌 특유의 높은 타수는 와일드 발칸보다 어나더 바이트에 더욱 큰 영향을 받은 것이라 할
@@ -192,7 +192,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             가장 무난한 어빌리티다.
@@ -212,7 +212,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             서먼 재규어/어나더 바이트, 와일드 발칸, 플래쉬 레인/램피지 애즈 원
