--- a/Web_Programming/homework/Wind Breaker.html
+++ b/Web_Programming/homework/Wind Breaker.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>윈드브레이커 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Wind%20Breaker.webp" alt="윈드브레이커">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>뛰어난 생존력과 공격 효율</strong><br>
                             상위 보스에서 많은 데미지를 막아주는 5차 스킬 '윈드월'은 가동률 높은 유사 무적기로 활용할 수 있고, 고성능 어그로기인 에메랄드 플라워를 가지고 있어 솔로 플레이
@@ -168,7 +168,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>무적기의 부재</strong><br>
                             윈드 월은 무적기가 아니라, 받는 피해를 상쇄하는 스킬이다. 즉 피격 판정을 완전하게 없애야 대처할 수 있는 패턴에는 무용지물이다. 또한 윈드 월은 윈드브레이커와
@@ -189,7 +189,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             페어리 턴을 사냥 주력기로 사용하고 각종 광역기와 설치기 등으로 사출기를 발생시키며 사냥하는 것이 일반적이다. 5차 이전에는 페어리 턴으로 몹을 긁으며 몬순을
                             주기마다 사용하는 것이 전부지만 5차 전직을 기점으로 사냥 능력이 꽤나 좋아지는데, 이는 5차 스킬 중에서 사냥에 유용한 스킬이 많기 때문이다. 보통 5차 스킬인
@@ -202,7 +202,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             천공의 노래를 주력으로 사용하면서 하울링 게일과 아이들 윔, 시그너스 팔랑크스, 볼텍스 스피어 등의 스킬을 재사용 대기시간이 돌 때마다 사용해주면 된다. 천공의
                             노래는 속사기인데도 다수를 공격할 수 있으므로 잡몹 소환 패턴에 비교적 쉽게 대처할 수 있으며, 여차하면 게일이나 아이들 윔으로 대충 정리해버리면 그만이다.
@@ -221,7 +221,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             전직업을 통틀어 가장 무난한 선택지. 최대 20%까지 추가 보공이 주어진다.
@@ -237,7 +237,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             천공의 노래, 트라이플링 윔/스톰 윔, 스톰 브링어, 페어리 턴
