--- a/Web_Programming/homework/Xenon.html
+++ b/Web_Programming/homework/Xenon.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>제논 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Xenon.webp" alt="제논">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>유니온 육성에서의 높은 가성비</strong><br>
                             제대로 키우려면 올스탯을 둘둘 감아야 하지만, 유니온용 제논은 STR, DEX, LUK 중 하나만 집중적으로 감아도 될 정도로 아이템 선택의 폭이 넓다. 아예
@@ -170,7 +170,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>키다운이 강요되는 매커니즘</strong><br>
                             극딜 한번 때려박기 위해서 손가락 하나를 키보드에 딱 붙인 채로 무려 18초를 버텨야 한다. 당연히 차지 끝날 때까지 아무 짓도 않고 가만히 기다려주는 보스는 없으니
@@ -195,7 +195,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             퍼지롭 매스커레이드 : 포격/폭격을 주력으로 사용한다. 고자본 유저의 경우에는 원킬컷을 맞췄다는 전제 하에 컴뱃 스위칭 : 격추를 대신 사용하기도 한다. 설치기로
                             홀로그램 그래피티 : 역장/융합이, 다수 공격형 상향 이동기로 다이아그널 체이스가 있기 때문에 지형 조건은 잘 타지 않는다. 여유가 된다면 쓸만한 홀리 심볼이나,
@@ -203,7 +203,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             평상시에는 퍼지롭 매스커레이드 : 저격만 꾹 누르고 있어도 되지만, 극딜 타이밍이나 설치기 지속시간의 문제 때문에 결코 편하게 있을 수만은 없다. 특히 극딜 타이밍에
                             문자 그대로 온갖 버프를 떡칠해야 하는데다 하이 리스크의 상징이나 다름없는 차징 시스템인 메가 스매셔, 오버로드 모드와 포톤 레이 때문에 에너지, MP, 차지
@@ -229,7 +229,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             대다수가 선망하는 1순위 어빌리티. 오파츠 코드에 보공이 있다고 해서 다른 옵션이 딱히 유의미한 변화를 일으키는 것도 아니다.
@@ -242,7 +242,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             퍼지롭 매스커레이드, 홀로그램 그래피티, 핀포인트 로켓
