--- a/Web_Programming/homework/Zero.html
+++ b/Web_Programming/homework/Zero.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>제로 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -142,8 +142,8 @@
                         <h1 class="article-title">제로(Zero)</h1>
                     </div>
                     <div class="article-body">
-                        <img id="c_image" src="image/제로.png" alt="제로">
-                        <h1 id="title">장점</h1>
+                        <img id="c_image" src="image/Zero.png" alt="제로">
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>독보적인 바인드 능력</strong><br>
                             현재 제로의 가장 특출난 장점이자 하드 보스 파티에서 제로를 채용하는 가장 큰 이유다. 제로는 메이플의 일반적인 바인드 스킬과 바인드 저항 시간을 공유하지 않는
@@ -201,7 +201,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>전직업 최상위의 코어 강화 난이도</strong><br>
                             제로가 강화할 수 있는 스킬 종류는 10가지이다. 완성도 있는 코어 강화를 위해서는 이 10가지의 스킬을 2중첩 7코어를 통해 빠짐없이 강화하거나, 스킬 하나(주로
@@ -298,7 +298,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">운용</h1>
+                        <h1 class="title">운용</h1>
                         <p>
                             제로는 기본적으로 MP를 소모하지 않으며 대신 TF(타임 포스)라는 고유 자원을 소모한다. 데몬슬레이어의 데몬 포스와 비슷하지만, 비슷한 타입의 데몬슬레이어와
                             키네시스가 데몬 포스와 싸이킥 포인트 부족에 늘상 시달리는 데 비해 회복 속도가 매우 빨라 타임 포스 때문에 스킬을 못 쓰는 경우는 거의 없다. 타임 포스 수치
@@ -339,7 +339,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             통칭 보공. 최댓값은 레전드리 20%, 유니크 10%. 일반적인 상황에서는 서포터보다 대미지 딜러로서 무난한 선택지다. 그러나 보공과 데미지 총합이 400%대라 보공
@@ -364,7 +364,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>메인 코어</strong><br>
                             피어스 쓰러스트, 롤링 어썰터, 스핀 커터, 롤링 커브, 쉐도우 레인, 스톰 브레이크 <br>
