--- a/Web_Programming/homework/Blaster.html
+++ b/Web_Programming/homework/Blaster.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
-<html>
+<!--suppress ALL -->
+<html lnag="ko">
 
 <head>
     <title>블래스터 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
