--- a/Web_Programming/homework/Cadena.html
+++ b/Web_Programming/homework/Cadena.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>카데나 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Cadena.webp" alt="카데나">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>스킬 연계를 통한 빠른 공격속도와 강력한 화력</strong><br>
                             전체적으로 퍼뎀이 높게 책정되어 있어 화력이 준수하고, 원킬컷도 낮다. 게다가 후술할 최종 데미지 증가와 크리티컬 관련 능력치로 인해 안 그래도 뛰어난 기초 능력치를
@@ -182,7 +182,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>까다로운 연계 버프 축적 및 유지</strong><br>
                             블래스터의 콤비네이션 트레이닝에 버금가는 까다로운 웨폰 버라이어티라는 패시브 버프를 가지고 있다. 모든 논체인아츠 스킬을 각각 한 번씩 적에게 적중시켜야 하기에
@@ -215,7 +215,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">운용</h1>
+                        <h1 class="title">운용</h1>
                         <p>
                             카데나 운용의 기초는 5차 스킬 체인아츠:메일스트롬을 설치하고 10초 내외로 짧은 쿨타임이 붙은 논체인아츠 스킬을 끊임없이 굴려 위크포인트 컨버징 어택과 웨폰
                             버라이어티 III 스택을 유지해 크리티컬 확률 12%, 크리티컬 대미지 60%, 최종 대미지 80%와 딜 지분의 약 20%를 차지하는 추가타를 가져가는 것이다.
@@ -241,7 +241,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>확률로 재사용 대기시간 미적용</strong><br>
                             카데나는 평타를 제외한 모든 공격 스킬에 재사용 대기시간이 붙어있는 만큼, 재사용 대기시간 미적용 옵션이 있으면 체인아츠:테이크다운과 터프 허슬을 제외한 나머지
@@ -264,7 +264,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             체인아츠:스트로크/웨폰 버라이어티/체인아츠:터프허슬, 서먼 슈팅 샷건/서먼 릴리싱 봄, 서먼 비팅 니들배트, 서먼 스트라이킹 브릭
                         </p>
