--- a/Web_Programming/homework/Cannon Shooter.html
+++ b/Web_Programming/homework/Cannon Shooter.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>캐논슈터 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Cannon%20Shooter.webp" alt="캐논슈터">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>매우 넓은 X축 범위</strong><br>
                             캐논슈터의 모든 스킬은 신궁, 키네시스, 메카닉 등과 같이 X축 범위가 매우 넓다. 이로 인해 사냥에서는 더 많은 몬스터를 안정적으로 잡을 수 있고, 보스전에서는
@@ -172,7 +172,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>넓은 X축 범위와는 대비되는 좁은 Y축 범위</strong><br>
                             사냥 주력기인 캐논 바주카의 Y축 범위가 매우 좁다보니 복층 사냥터나 몹이 작은 경우 사냥에 불편함을 느낄 수 있다. 리마스터 이후 차수대비 높은 퍼뎀을 가진 미니
@@ -206,7 +206,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             우월한 전방 범위를 자랑하는 캐논 바주카를 주력으로 사용하며, 설치형 소환수인 서포트 몽키 트윈스와 마그네틱 앵커를 이용해 필드 점유율을 높이는 식으로 운용한다.
                             여기에 5차 전직 이후로는 캐논볼을 설치기처럼 운용할 수 있으며, ICBM으로 깔리는 낙진 장판과 종속형 소환수인 스페셜 몽키 에스코트가 사냥 효율을 더욱
@@ -214,7 +214,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             우월한 전방 범위를 자랑하는 캐논 바주카를 주력으로 사용하며, 설치형 소환수인 서포트 몽키 트윈스와 마그네틱 앵커를 이용해 필드 점유율을 높이는 식으로 운용한다.
                             여기에 5차 전직 이후로는 캐논볼을 설치기처럼 운용할 수 있으며, ICBM으로 깔리는 낙진 장판과 종속형 소환수인 스페셜 몽키 에스코트가 사냥 효율을 더욱
@@ -222,7 +222,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>첫째줄- 보스 몬스터 공격 시 데미지 증가</strong><br>
                             상위 보스를 목표로 하고 있다면 보공 어빌의 효율이 높다.
@@ -238,7 +238,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             캐논 바주카, 캐논 버스터, 서포트 몽키 트윈스
