--- a/Web_Programming/homework/Demon Avenger.html
+++ b/Web_Programming/homework/Demon Avenger.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>데몬슬레이어 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Demon%20Avenger.webp" alt="데몬어벤져">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>단순하고 효율적인 보스전 메커니즘</strong><br>
                             데벤져의 평딜 방식은 평이하다. 프렌지를 활성화하고 적에게 비비면서 실드체이싱+엑스큐션만 쓰다가, 가끔 방깎 디버프인 아머 브레이크를 먹이고, 릴리즈 오버로드 쓰는
@@ -178,7 +178,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>어려운 HP 관리법</strong><br>
                             아무리 상시 흡혈과 모든 피해 감소를 달고 있다고 해도, 프렌지를 활성화한 내내 HP가 주기적으로 감소하는데다 회복력까지 극도로 제한된다. 29레벨 프렌지로 회복력을
@@ -224,7 +224,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             5차 전직 이전까지의 육성은 쉽다. 실드 체이싱에 목매지 않아도 사우전드 소드라는 좋은 사냥용 스킬이 있기 때문. 게다가 HP 코스트긴 하지만 자가 회복 스킬도
                             빵빵해서, 기계무덤의 스카이라인처럼 최대 HP에 비례한 피해를 주는 낙하물이 떨어지는 곳이어도 인헤일 바이탈리티를 사용해주면 물약을 쓸 일도 없다.
@@ -235,7 +235,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             극딜 화력은 평범하지만, 강력한 평딜 덕분에 모든 보스전에서 보통 이상은 하는 직업이다. 일단 높은 자체 방어 무시율, 방어력 감소 디버프, 바인드(행동불능) 등
                             무적기를 제외한 보스전에 필요한 유틸리티는 거의 다 구비하고 있다. 특히 실드 체이싱이라는 추적 공격형 오브젝트 소환 스킬과 데몬 프렌지의 공격 무시/반사 완전
@@ -244,7 +244,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>재사용 대기시간 미적용</strong><br>
                             1순위 고정이다. 데벤져는 실드 체이싱의 가동률을 높이기 위해 이 옵션에 더해 몬스터 라이프의 쁘띠 은월과 큰 운영자의 벌룬까지 대동한다. 이 어빌리티가 없다면
@@ -264,7 +264,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>필수</strong><br>
                             익시드 : 문라이트 슬래시, 익시드 : 엑스큐션, 실드 체이싱
