--- a/Web_Programming/homework/Dual Blade.html
+++ b/Web_Programming/homework/Dual Blade.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>듀얼블레이드 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Dual%20Blade.webp" alt="듀얼블레이드">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>뛰어난 기동력</strong><br>
                             트리플 점프는 기본이고, '블레이드 어센션' 스킬을 이용하여 높고 먼 거리를 이동할 수 있다. 트리플 점프 + 블레이드 어센션으로 최대 7단 점프를 가능케 한다. 위
@@ -169,7 +169,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>전체적으로 낮은 투자 효율</strong><br>
                             보조무기를 강화할 수 있다는 사실은 득보다 실이 더 많다. 기본 스펙의 기준이 보조무기 강화를 완료한 후를 바탕으로 책정되기 때문이다.
@@ -207,7 +207,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             4차 전에는 샤프 슬래시-슬래시 스톰-블러디 스톰-블레이드 퓨리 순으로 전직을 거듭할수록 새로운 스킬을 주력으로 갈아타는 방식이다. 여기에 광역기인 써든 레이드를
                             쿨마다 써주면 끝이다.
@@ -221,7 +221,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             공격 스킬마다 추가 방어율 무시가 붙어 있기 때문에 방어율 무시를 올려야 할 걱정이 적다. 5차 스킬 카르마 퓨리와 블레이드 토네이도가 주력 딜링을, 블레이드 스톰이
                             극딜 타이밍을 책임지므로 평딜과 극딜 사이의 격차가 다소 적다. 여기에 사슬지옥이나 파이널 컷의 무적기나, 아수라 등 슈퍼 스탠스에 고정 피해량 무시를 포함한
@@ -230,7 +230,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
                             대부분의 듀블 유저들이 채용하는 첫줄 어빌리티. 데미지 증가량 퍼센트가 낮고 최종 데미지 증가량이 높기 때문에 크뎀 보공에 몰빵하는 듀블에게는 이 어빌만큼 어울리는
@@ -254,7 +254,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             블레이드 퓨리, 팬텀 블로우, 아수라
