--- a/Web_Programming/homework/Flame Wizard.html
+++ b/Web_Programming/homework/Flame Wizard.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>플레임위자드 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Flame%20Wizard.webp" alt="플레임위자드">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>준수한 사냥 능력</strong><br>
                             플위의 사냥능력은 원킬 시 효율이 매우 좋아지는 주력기를 비롯해 여러 가지의 광역기, 설치기, 사출기, 소환수 등이 있어 사냥은 상당히 좋은 편이다. 또한 오비탈,
@@ -184,7 +184,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>지극히 낮은 체력과 전 직업 최하위권의 내구도</strong><br>
                             마법사 직업군은 체력이 적지만, 플레임위자드는 그 중에서도 유난히 약하다. 순수+스킬 HP는 45개 전 직업 중 45위(꼴찌)로, 100레벨이 넘어도 체력이
@@ -244,7 +244,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             반비탈 컷의 가능 여부에 따라 크게 갈린다. 오비탈 플레임은 화염 구체가 투사될 때 1번, 시전자에게로 돌아올 때 1번 타격하여 총 2번 타격한다. 이 2번이 모두
                             적중해야 필드 몬스터가 사망하면 원비탈 또는 한비탈 컷, 2번 타격 중에 1번만으로 사망하면 반비탈 컷이라고 한다. 아케인 리버부터 반비탈 컷이 가능한 플위는 가히
@@ -260,7 +260,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             플위는 키네시스, 라라와 더불어 마법사 직업군 중 단 셋 뿐인 더블 점프 사용자이다. 여기에는 다음과 같은 장단점이 있다.
 
@@ -285,7 +285,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>보스 공격력 증가</strong><br>
                             버닝 리전을 상시 유지하기 위해선 버프 지속시간 증가 수치가 필요하지만, 극한으로 끌어올릴 필요는 없다.
@@ -300,7 +300,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             오비탈 플레임, 블레이징 익스팅션, 피닉스 드라이브
