--- a/Web_Programming/homework/Khali.html
+++ b/Web_Programming/homework/Khali.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ko">
 
 <head>
     <title>칼리 공략</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
-    <script src="pulldown%20menu.js"></script>
+    <script src="Pulldown Menu.js"></script>
 </head>
 
 <body>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="article-body">
                         <img id="c_image" src="image/Khali.webp" alt="칼리">
-                        <h1 id="title">장점</h1>
+                        <h1 class="title">장점</h1>
                         <p>
                             <strong>압도적인 기동성</strong><br>
                             칼리 운영의 가장 큰 특징이자 핵심. 운영진들이 대놓고 기동성을 강조한만큼, 칼리의 핵심인 크레센텀과 연계해서 6연속으로 8방향을 움직이는 돌진기인 보이드 러쉬를
@@ -160,7 +160,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">단점</h1>
+                        <h1 class="title">단점</h1>
                         <p>
                             <strong>리스크가 높은 캔슬</strong><br>
                             헥스:차크람 스윕의 캔슬 타이밍이 조금이라도 어긋나면 뒤로 튕겨나가 버리기 때문에, 패턴에 맞아죽거나 리스트레인트 링의 범위를 벗어날 위험이 있다. 헥스:차크람
@@ -180,7 +180,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">사냥 운용</h1>
+                        <h1 class="title">사냥 운용</h1>
                         <p>
                             보이드 러쉬+크레센텀 연계를 기반으로 필드를 온통 휘젓고 다니는 방식이 주가 된다. 이때 러쉬를 너무 연타하다간 엉뚱한 방향으로 빠질 우려가 있으므로, 키 입력 간에
                             여유를 둘 것이 권장된다. 헥스 스킬과 차크리는 러쉬가 닿지 않았던 공간을 커버하는 식으로 쓰되, 보이드 스킬로 캔슬해서 다음에 쓸 차크리를 생성해두는 식으로
@@ -188,7 +188,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">보스전 운용</h1>
+                        <h1 class="title">보스전 운용</h1>
                         <p>
                             캔슬이나 연계 없이도 칼리의 공격속도는 빠른 편이기 때문에 굳이 하지 않아도 답답할 일은 없지만 캔슬을 해야 사출기인 차크리가 만들어지기 때문에 제대로 파고드려면
                             캔슬을 해야 한다. 조작감이 이질적이거나, 타이밍이 까다롭거나 한건 아니라 캔슬 난이도는 낮다.
@@ -202,7 +202,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">어빌리티</h1>
+                        <h1 class="title">어빌리티</h1>
                         <p>
                             <strong>재사용 대기시간 미적용</strong><br>
                             보이드 계열을 제외한 모든 스킬들이 재사용 대기시간 초기화의 효과를 받는다. 특히 기동성의 상징인 보이드 러쉬를 초기화 할 수 있는 크레센텀이 초기화가 된다면 이론상
@@ -225,7 +225,7 @@
                         </p>
                         <br>
                         <br>
-                        <h1 id="title">코어강화</h1>
+                        <h1 class="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
                             아츠 : 플러리/크레센텀, 헥스 : 차크람 스윕/스플릿/퓨리, 레조네이트/디시빙 블레이드
